ЛБ-3: Добавление библиотек для формирования WAR файла